# skybrush-ext-template

./: README.md  pyproject.toml  skybrushd.jsonc
src/skybrush_ext_template/: extension.py
