[project]
# Change this to the name of your own extension
name = "skybrush-ext-template"
version = "1.0.0"
description = "Template project for Skybrush Server extension modules"
authors = [{ name = "Tamas Nepusz", email = "ntamas@gmail.com" }]
license = "MIT"
requires-python = ">=3.10"

[dependency-groups]
dev = ["flockwave-server>=2.32.1"]

[project.entry-points."skybrush.server.ext"]
# Change the key below to the name of the extension that you want to use in
# configuration files, and the value to the name of the Python module that
# contains the extension code
template = "skybrush_ext_template"

[project.scripts]
skybrushd = "flockwave.server.launcher:start"

[tool.ruff]
ignore = ["B905", "C901", "E402", "E501"]
line-length = 80
select = ["B", "C", "E", "F", "W"]

[[tool.uv.index]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"

[tool.uv.sources]
flockwave-server = { index = "fury" }

[build-system]
requires = ["uv_build>=0.7.18"]
build-backend = "uv_build"
